# Fuzzy-Soup

./: .gitignore  Cargo.toml
src/: main.rs
src/train/: colmap.rs  mod.rs  trainer.rs
src/utils/: mod.rs  spherical_voronoi.rs  triangle_splat.rs
